# CUDA

./: CMakeLists.txt  README.md  calcMultiFlow.sh
VisualProject/: .gitignore  SuperResolution.sln
VisualProject/SuperResolution/: ScaleBlurTests.cu  SuperResolution.vcxproj  SuperResolution.vcxproj.filters  divergence.cu  divergence.h  energy.cu  energy.h  flow_color.cu  flow_color.h  helper.cu  helper.h  helper_math.h  imageTransform.cu  imageTransform.h  kernel.cu  main.cu  projections.cu  projections.h  testFile.cu  update.cu  update.h  updateFlowField.cu  updateFlowField.h  updateSuperResolution.cu  updateSuperResolution.h
material/Notes_Latex/: notes.tex  references.bib
material/Presentation/: presentation.tex
